--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -5,6 +5,8 @@ $color-dark: #222629;  // ciemny niebieski
 $color-dark-gray: #474b4f;  // ciemny szary
 $color-light-gray: #6b6e70;  // jasny szary
 $color-font-white: #ffffff; // biały kolor fontu
+$color-smoked-white: #cacaca;
+
 $font-family: 'Gotham', sans-serif;
 $font-size-base: 16px;
 
